findbugs fixes, repackage org.json